--- a/src/app/components/upload/view.html
+++ b/src/app/components/upload/view.html
@@ -1,3 +1,3 @@
 <label class="fa fa-cloud-upload fa-5x">
-    <input type="file"></input>
+    <input type="file" accept="image/*"></input>
 <label>
