The s3policy is now generated via the API and the file upload is done successfully

--- a/src/app/components/upload/style.scss
+++ b/src/app/components/upload/style.scss
@@ -1,19 +1,12 @@
 upload {
-    label {
+    button {
         background-color: green;
+        color: white;
+        border: none;
+        outline: none;
         width: 150px;
         height: 150px;
         border-radius: 100px;
-        text-align: center;
-        color: white;
         cursor: pointer;
-        
-        input[type="file"] {
-            display: none;
-            position: absolute;
-        }
-    }
-    label::before {
-        line-height: 140px;
     }
 }
