--- a/src/assets/style/app.css
+++ b/src/assets/style/app.css
@@ -1,20 +1,15 @@
 body {
   font-family: "helvetica"; }
 
-upload label {
+upload button {
   background-color: green;
+  color: white;
+  border: none;
+  outline: none;
   width: 150px;
   height: 150px;
   border-radius: 100px;
-  text-align: center;
-  color: white;
   cursor: pointer; }
-  upload label input[type="file"] {
-    display: none;
-    position: absolute; }
-
-upload label::before {
-  line-height: 140px; }
 
 section#home upload {
   position: absolute;
