--- a/src/app/components/upload/view.html
+++ b/src/app/components/upload/view.html
@@ -1,3 +1,1 @@
-<label class="fa fa-cloud-upload fa-5x">
-    <input type="file" accept="image/*"></input>
-<label>
+<button class="fa fa-cloud-upload fa-5x" ngf-select ngf-change="upload($files)"></button>
