Added accept attributes

--- a/src/app/components/upload/view.html
+++ b/src/app/components/upload/view.html
@@ -1,1 +1,1 @@
-<button class="fa fa-cloud-upload fa-5x" ngf-select ngf-change="upload($files)"></button>
+<button class="fa fa-cloud-upload fa-5x" ngf-select ngf-change="upload($files)" accept="image/*" ngf-accept="'image/*'"></button>
