--- a/src/app/components/upload/style.scss
+++ b/src/app/components/upload/style.scss
@@ -1,5 +1,5 @@
 upload {
-    button {
+    div.button {
         background-color: green;
         color: white;
         border: none;
@@ -8,5 +8,7 @@ upload {
         height: 150px;
         border-radius: 100px;
         cursor: pointer;
+        text-align: center;
+        line-height: 140px;
     }
 }
