--- a/src/app/views/home/index.html
+++ b/src/app/views/home/index.html
@@ -1,3 +1,7 @@
 <section id="home">
     <upload></upload>
+    
+    <actionbar>
+        <action-item icon="fa fa-cloud-upload" text="Upload"></action-item>
+    </actionbar>
 </section>
