--- a/src/assets/style/sections/_components.scss
+++ b/src/assets/style/sections/_components.scss
@@ -1,1 +1,3 @@
 @import "../../../app/components/upload/style";
+@import "../../../app/components/actionbar/style";
+@import "../../../app/components/actionitem/style";
