Removed the upload component from the center of the screen

--- a/src/app/components/actionitem/style.scss
+++ b/src/app/components/actionitem/style.scss
@@ -2,25 +2,45 @@ action-item {
     > div {
         position: absolute;
         left: 50%;
-        top: -28px;
-        margin-left: -30px;
-        
+        top: -30px;
+        margin-left: -50px;
+        width: 100px;
+        height: 78px;
+        text-align: center;
         
         > button {
-            width: 60px;
-            height: 60px;
+            width: 56px;
+            height: 56px;
             background-color: $accent;
             border: none;
-            border-radius: 60px;
+            border-radius: 100%;
             font-size: $xxxlarge !important;
             color: white;
+            cursor: pointer;
+            position: absolute;
+            top: 2px;
+            left: 50%;
+            margin-left: -28px;
+            outline: none;
+        }
+        
+        > button.ng-click-active {
+            width: 60px;
+            height: 60px;
+            top: 0px;
+            margin-left: -30px;
+            background-color: $accentActive;
         }
         
         > span {
             display: block;
             text-align: center;
-            font-size: $xsmall;
+            font-size: $xsmall - 2px;
             margin-top: 4px;
+            position: absolute;
+            left: 0px;
+            right: 0px;
+            bottom: 3px;
         }
     }
 }
