--- a/src/app/components/actionitem/view.html
+++ b/src/app/components/actionitem/view.html
@@ -1,5 +1,5 @@
 <div>
-    <button ng-class="icon"></button>
+    <button ng-class="icon" ng-click="trigger()"></button>
     
     <span ng-if="text" ng-bind="text"></span>
 </div>
