--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -13,9 +13,11 @@ $xxxxxlarge: 100px;
 $font: "helvetica";
 
 $accent: #779933;
+$accentActive: #5c7829;
 
 body {
 	font-family: $font;
+    color: #444;
     //background: black;
 }
 
