Added the upload page

--- a/src/app/views/home/index.html
+++ b/src/app/views/home/index.html
@@ -1,5 +1,5 @@
 <section id="home">
     <actionbar>
-        <action-item icon="fa fa-cloud-upload" text="Upload"></action-item>
+        <action-item icon="fa fa-cloud-upload" text="Upload" trigger="upload()"></action-item>
     </actionbar>
 </section>
