Added a back button item

--- a/src/assets/style/sections/_components.scss
+++ b/src/assets/style/sections/_components.scss
@@ -1,3 +1,4 @@
 @import "../../../app/components/upload/style";
 @import "../../../app/components/actionbar/style";
 @import "../../../app/components/actionitem/style";
+@import "../../../app/components/backactionitem/style";
