Changed config sample

--- a/src/app/components/backactionitem/style.scss
+++ b/src/app/components/backactionitem/style.scss
@@ -42,7 +42,7 @@ back-action-item {
             }
         }
         div.button.ng-click-active {
-            background-color: #ccc;
+            background-color: darken(#eee, 5%);
         }
     }
 }
