It is now possible to select a file

--- a/src/app/views/home/index.html
+++ b/src/app/views/home/index.html
@@ -1,5 +1,5 @@
 <section id="home">
     <actionbar>
-        <action-item icon="fa fa-cloud-upload" text="Upload" trigger="upload()"></action-item>
+        <action-item icon="fa fa-cloud-upload" text="Upload" ngf-select ngf-change="upload($files)" accept="image/*" ngf-accept="'image/*'"></action-item>
     </actionbar>
 </section>
