--- a/src/app/views/upload/index.html
+++ b/src/app/views/upload/index.html
@@ -1,5 +1,5 @@
 <section id="upload">
-    Hello World
+    <img ngf-src="file" ngf-background="file" ngf-accept="'.png'"> 
     
     <actionbar>
         <back-action-item></back-action-item>
