Added image preview but it is not scaled correctly yet

--- a/src/app/views/upload/index.html
+++ b/src/app/views/upload/index.html
@@ -1,5 +1,7 @@
 <section id="upload">
-    <img ngf-src="file" ngf-background="file" ngf-accept="'.png'"> 
+    <!--<img id="preview" ngf-src="file" ngf-background="file" ngf-accept="'image/*'"> -->
+    
+    <img-preview img-src="file"></img-preview>
     
     <actionbar>
         <back-action-item></back-action-item>
