Added a titlebar on the upload page

--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -21,6 +21,8 @@ body {
     //background: black;
 }
 
+@import "general/header";
+
 @import "sections/components";
 @import "sections/home";
 @import "sections/upload";
