Added an input field to enter a caption when uploading the photo

--- a/src/app/views/upload/index.html
+++ b/src/app/views/upload/index.html
@@ -1,5 +1,7 @@
 <section id="upload">
     <img-preview img-src="file"></img-preview>
+    
+    <input type="text" id="description" placeholder="Enter a caption" />
 </section>
 
 <actionbar>
