--- a/src/app/views/upload/index.html
+++ b/src/app/views/upload/index.html
@@ -1,7 +1,7 @@
 <section id="upload">
     <img-preview img-src="file"></img-preview>
     
-    <input type="text" id="description" placeholder="Enter a caption" />
+    <input type="text" id="description" placeholder="Omschrijving" />
 </section>
 
 <actionbar>
