It's now possible to upload an image to s3 and the progress bar is updated

--- a/src/app/views/includes/titlebar.html
+++ b/src/app/views/includes/titlebar.html
@@ -1,5 +1,5 @@
 <header>
-    <div id="rightBarButton" ng-if="_data.rightBarButtonItem" ng-click="item.action()">
+    <div id="rightBarButton" ng-if="_data.rightBarButtonItem" ng-click="_data.rightBarButtonItem.action()">
         <span class="line"></span>
         <span class="text" ng-bind="_data.rightBarButtonItem.title"></span>    
     </div>
