--- a/src/app/views/upload/index.html
+++ b/src/app/views/upload/index.html
@@ -2,6 +2,8 @@
     <img-preview img-src="file"></img-preview>
     
     <input type="text" id="description" placeholder="Omschrijving" />
+    
+    <progress-bar value="{{progress}}" ng-if="progress"></progress-bar>
 </section>
 
 <actionbar>
