--- a/src/assets/style/sections/_upload.scss
+++ b/src/assets/style/sections/_upload.scss
@@ -25,4 +25,8 @@ section#upload {
         padding: 0px 7px;
         font-weight: 100;
     }
+    
+    div.progress {
+        margin-top: 10px;
+    }
 }
