--- a/src/app/components/progressbar/view.html
+++ b/src/app/components/progressbar/view.html
@@ -1,3 +1,3 @@
-<div>
-    <div id="progress" style="width: {{value}}%"></div>
+<div class="progress">
+    <div style="width: {{value}}%"></div>
 </div>
