Added an activity indicator and a backdrop when the app is calling the API

--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -30,6 +30,7 @@ body {
 }
 
 @import "general/header";
+@import "general/activityIndicator";
 
 @import "sections/components";
 @import "sections/home";
