The email and name are now stored on the server

--- a/src/app/views/user/index.html
+++ b/src/app/views/user/index.html
@@ -1,5 +1,9 @@
 <section id="user">
-    <input type="text" id="description" ng-model="description" placeholder="Omschrijving" />
+    <form>
+        <input type="text" id="name" ng-model="name" placeholder="Naam" />
+        
+        <input type="text" id="mail" ng-model="mail" placeholder="E-mail adres" />
+    </form>
 </section>
 
 <actionbar>
