Removed log and added circle exclamation instead of triangle

--- a/src/app/views/user/index.html
+++ b/src/app/views/user/index.html
@@ -5,13 +5,13 @@
     
     <form name="frm">
         <div>
-            <i class="fa fa-exclamation-triangle" ng-show="frm.name.$invalid && frm.name.$touched"></i>
+            <i class="fa fa-exclamation-circle" ng-show="frm.name.$invalid && frm.name.$touched"></i>
             <input type="text" id="name" name="name" ng-model="name" placeholder="Naam" required />
         </div>
         
         <div>
-            <i class="fa fa-exclamation-triangle" ng-show="frm.mail.$invalid && frm.mail.$touched"></i>
-            <input type="email" id="mail" name="mail" ng-model="mail" placeholder="E-mail adres" required />
+            <i class="fa fa-exclamation-circle" ng-show="frm.mail.$invalid && frm.mail.$touched"></i>
+            <input type="email" id="mail" name="mail" ng-model="mail" placeholder="E-mailadres" required />
         </div>
     </form>
 </section>
