The thumbnails are now shown correctly

--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -15,6 +15,8 @@ $font: "helvetica";
 $accent: #779933;
 $accentActive: #5c7829;
 
+$actionBarHeight: 50px;
+
 body {
     font-family: $font;
     color: #444;
