--- a/src/app/components/actionbar/style.scss
+++ b/src/app/components/actionbar/style.scss
@@ -5,6 +5,6 @@ actionbar {
         bottom: 0px;
         left: 0px;
         right: 0px;
-        height: 50px;
+        height: $actionBarHeight;
     }
 }
