--- a/src/app/views/home/index.html
+++ b/src/app/views/home/index.html
@@ -1,7 +1,7 @@
 <section id="home">
     <ul ng-if="model.getImages().length > 0">
         <li ng-repeat="image in model.getImages()">
-            <img ng-src="http://{{config.BUCKET_NAME}}.s3-eu-west-1.amazonaws.com/raw/{{image.image}}" width="150" height="150" />
+            <img ng-src="http://{{config.BUCKET_NAME}}.s3-eu-west-1.amazonaws.com/thumbs/{{image.image}}" />
         </li>
     </ul>
 </section>
