--- a/src/assets/style/sections/_home.scss
+++ b/src/assets/style/sections/_home.scss
@@ -1,9 +1,43 @@
 section#home {
-    upload {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        margin-top: -75px;
-        margin-left: -75px;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: $actionBarHeight;
+    overflow: auto;
+    padding: 5px;
+    
+    ul {
+        margin: 0 auto;
+        
+        li {
+            padding: 5px;
+            text-align: center;
+            width: 150px;
+            display: inline-block;
+            
+            img {
+                width: 100%;
+                max-width: 150px;
+            }
+        }
+        
+        @media (max-width: 600px) {
+            li {
+                width: 25%;
+            }
+        }
+        
+        @media (max-width: 490px) {
+            li {
+                width: 33%;
+            }
+        }
+        
+        @media (max-width: 380px) {
+            li {
+                width: 50%;
+            }
+        }
     }
 }
