--- a/src/assets/style/sections/_components.scss
+++ b/src/assets/style/sections/_components.scss
@@ -2,3 +2,4 @@
 @import "../../../app/components/actionitem/style";
 @import "../../../app/components/backactionitem/style";
 @import "../../../app/components/progressbar/style";
+@import "../../../app/components/imgasync/style";
