--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -12,8 +12,11 @@ $xxxxxlarge: 100px;
 
 $font: "helvetica";
 
-$accent: #779933;
-$accentActive: #5c7829;
+$accent: #ff3333;
+$accentActive: #cc3333;
+
+// $accent: #779933;
+// $accentActive: #5c7829;
 
 $actionBarHeight: 50px;
 
