--- a/src/assets/style/sections/_home.scss
+++ b/src/assets/style/sections/_home.scss
@@ -32,6 +32,30 @@ section#home {
                 }
             }
         }
+        
+        > footer {
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+            right: 10px;
+            z-index: 100;
+            font-size: $xsmall;
+            color: white;
+            
+            h2 {
+                font-weight: 100;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                width: 100%;
+            }
+            
+            time {
+                font-weight: 100;
+                font-size: $xxsmall;
+                margin-top: 3px;
+            }
+        }
     }
     
     @media (max-width: 2410px) {
@@ -125,42 +149,10 @@ section#home {
         }
     }
     
-    @media (max-width: 390px) {
+    @media (max-width: 330px) {
         div.cell {
             width: 50%;
             padding-bottom: 50%;
         }
     }
-    
-    // ul {
-    //     margin: 0 auto;
-        
-    //     li {
-    //         text-align: center;
-    //         width: 150px;
-    //         padding-bottom: 150px;
-    //         display: inline-block;
-    //         position: relative;
-            
-    //         img {
-    //             width: 100%;
-    //             max-width: 150px;
-    //         }
-    //     }
-        
-        
-    //     @media (max-width: 490px) {
-    //         li {
-    //             width: 33%;
-    //             padding-bottom: 33%;
-    //         }
-    //     }
-        
-    //     @media (max-width: 380px) {
-    //         li {
-    //             width: 50%;
-    //             padding-bottom: 50%;
-    //         }
-    //     }
-    // }
 }
