--- a/src/assets/style/sections/_home.scss
+++ b/src/assets/style/sections/_home.scss
@@ -7,6 +7,7 @@ section#home {
     overflow: auto;
     padding: 5px;
     font-size: 0;
+    -webkit-overflow-scrolling: touch;
     
     div.cell {
         width: 150px;
