--- a/src/assets/style/app.scss
+++ b/src/assets/style/app.scss
@@ -39,5 +39,6 @@ body {
 
 @import "sections/components";
 @import "sections/home";
+@import "sections/detail";
 @import "sections/upload";
 @import "sections/user";
