--- a/src/assets/style/sections/_home.scss
+++ b/src/assets/style/sections/_home.scss
@@ -14,6 +14,7 @@ section#home {
         padding-bottom: 150px;
         position: relative;
         display: inline-block;
+        cursor: pointer;
         
         > div {
             position: absolute;
