Added the description and the titlebar in the detail view

--- a/src/app/views/detail/index.html
+++ b/src/app/views/detail/index.html
@@ -2,6 +2,8 @@
     <div class="image">
         <img ng-src="http://{{config.BUCKET_NAME}}.s3-eu-west-1.amazonaws.com/raw/{{image.image}}" />
     </div>
+    
+    <p ng-bind="image.description"></p>
 </section>
 
 <actionbar>
