--- a/src/app/views/detail/index.html
+++ b/src/app/views/detail/index.html
@@ -3,7 +3,7 @@
         <img ng-src="http://{{config.BUCKET_NAME}}.s3-eu-west-1.amazonaws.com/raw/{{image.image}}" />
     </div>
     
-    <p ng-bind="image.description"></p>
+    <p ng-if="image.description" ng-bind="image.description"></p>
 </section>
 
 <actionbar>
